Fix body width cutoff issue

--- a/css/hyppo.css
+++ b/css/hyppo.css
@@ -32,6 +32,9 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	display: block;
+	position: absolute;
+	min-width: 100%;
 	background-color: #272926;
 	background-image: url('../images/chalk_bg.png'), url('../images/background.jpg');
 	background-position: center 185px, center top;
